--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: PT Sans, Arial, sans-serif;
+    line-height: 24px;
+    font-size: 14px;
+    color: #000000;;
 }
