--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-    font-family: PT Sans, Arial, sans-serif;
+    font-family: PT Sans, Helvetica, Arial, sans-serif;
     line-height: 24px;
     font-size: 14px;
-    color: #000000;;
+    color: #000000;
 }
